2007-07-06  Andreas Schwab  <schwab@suse.de>

	* emacs-lisp/lisp-mode.el (eval-last-sexp): Avoid introducing any
	dynamic bindings around the evaluation of the expression.
	Reported by Jay Belanger <jay.p.belanger@gmail.com>.

2007-07-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* autorevert.el (auto-revert-tail-handler): Use inhibit-read-only.
	Run before-revert-hook.  Suggested by Denis Bueno <denbuen@sandia.gov>.
	Use run-hooks rather than run-mode-hooks.

2007-07-05  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-comb.el (math-random-digit): Rename to
	`math-random-three-digit-number'.
	(math-random-digits): Don't depend on representation of integer.

	* calc/calc-bin.el (math-bignum-logb-digit-size)
	(math-bignum-digit-power-of-two): New constants.
	(math-and-bignum,math-or-bignum,math-xor-bignum,math-diff-bignum)
	(math-not-bignum,math-clip-bignum): Use the constants
	`math-bignum-digit-power-of-two' and `math-bignum-logb-digit-size'
	instead of their values.
	(math-clip): Use math-small-integer-size instead of its value.

	* calc/calc.el (math-add-bignum): Replace number by constant.

2007-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* wid-edit.el (widget-documentation-string-value-create):
	Insert indentation spaces.

2007-07-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* emacs-lisp/byte-opt.el: Revert last change.

2007-07-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-handled-backends): Add HG.

	* vc-hg.el (vc-handled-backends): Remove, done in vc-hooks.el now.

2007-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* complete.el (PC-do-complete-and-exit): Add support for the new
	`confirm-only' confirmation mode.

2007-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* cus-edit.el (custom-commands): New variable.
	(custom-tool-bar-map): New variable.  Initialize using
	`custom-commands'.
	(custom-mode): Use `custom-tool-bar-map'.
	(custom-buffer-create-internal): Insert action buttons only if